안녕하세요

--- a/hover.html
+++ b/hover.html
@@ -12,5 +12,9 @@
 </head>
 <body>
     <a href="https://www.google.com/search?sxsrf=ALeKk03VYAGovbLm9cAf3cLJGOFA9zkh7w%3A1603260358617&ei=xs-PX5WhJYr6wAOv55CIDA&q=css+hover&oq=css+hover&gs_lcp=CgZwc3ktYWIQAzIECAAQQzIHCAAQFBCHAjIECAAQQzICCAAyAggAMgQIABBDMgIIADICCAAyBAgAEEMyAggAOgQIIxAnOgYIABAHEB46BAgAEA1Q1iFY3SZg3ihoAHAAeACAAXOIAakEkgEDMC41mAEAoAEBqgEHZ3dzLXdpesABAQ&sclient=psy-ab&ved=0ahUKEwiVnKGhgsXsAhUKPXAKHa8zBMEQ4dUDCA0&uact=5">링크를 누르세요</a>
+    <ul>
+        <li>이름: 김지수</li>
+        <li>나이: 17세</li>
+    </ul>
 </body>
 </html>
